--- a/index.html
+++ b/index.html
@@ -105,14 +105,19 @@
       </section>
     </main>
 
-    <!--<footer>
+    <footer>
       <div class="attribution">
         Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        <a
+          href="https://www.frontendmentor.io?ref=challenge"
+          target="_blank"
+          rel="noopener"
           >Frontend Mentor</a
         >. Coded by
-        <a href="https://twitter.com/czltv" target="_blank">Cristina Zlatov</a>.
+        <a href="https://twitter.com/czltv" target="_blank" rel="noopener"
+          >Cristina Zlatov</a
+        >.
       </div>
-    </footer>-->
+    </footer>
   </body>
 </html>
