--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <img
                   class="card-profile-img"
                   src="images/image-colton.jpg"
-                  alt=""
+                  alt="Headshot of Colton"
                 />
                 <div class="card-profile-txt">
                   <p class="card-profile-un">Colton Smith</p>
@@ -69,7 +69,7 @@
                 <img
                   class="card-profile-img"
                   src="images/image-irene.jpg"
-                  alt=""
+                  alt="Headshot of Irene"
                 />
                 <div class="card-profile-txt">
                   <p class="card-profile-un">Irene Roberts</p>
@@ -87,7 +87,7 @@
                 <img
                   class="card-profile-img"
                   src="images/image-anne.jpg"
-                  alt=""
+                  alt="Headshot of Anne"
                 />
                 <div class="card-profile-txt">
                   <p class="card-profile-un">Anne Wallace</p>
